--- a/OpticalValleyUnite/Classes/UI/Journal/ViewController/YQWorkRecord.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Journal/ViewController/YQWorkRecord.storyboard
@@ -21,41 +21,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tmc-H1-b6F">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="ghf-y9-Jdu"/>
-                                </constraints>
-                                <items>
-                                    <navigationItem title="Title" id="MYT-Ce-Uzg">
-                                        <barButtonItem key="rightBarButtonItem" title="完成" id="gaJ-i5-qPq"/>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="dZa-us-mco">
-                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="cmw-Fu-saa"/>
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="C86-Au-pYa">
-                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="tmc-H1-b6F" firstAttribute="top" secondItem="QiK-20-gZA" secondAttribute="bottom" id="0pU-IE-lPb"/>
                             <constraint firstItem="C86-Au-pYa" firstAttribute="top" secondItem="dZa-us-mco" secondAttribute="bottom" id="1RH-0E-40p"/>
                             <constraint firstItem="wnk-2V-u7q" firstAttribute="top" secondItem="C86-Au-pYa" secondAttribute="bottom" id="7ay-jj-KRD"/>
-                            <constraint firstItem="tmc-H1-b6F" firstAttribute="leading" secondItem="wnY-0o-a8L" secondAttribute="leading" id="HOa-iq-SDB"/>
                             <constraint firstAttribute="trailing" secondItem="C86-Au-pYa" secondAttribute="trailing" id="JoR-6X-6ny"/>
                             <constraint firstItem="C86-Au-pYa" firstAttribute="leading" secondItem="wnY-0o-a8L" secondAttribute="leading" id="KGC-c8-x7h"/>
+                            <constraint firstItem="dZa-us-mco" firstAttribute="top" secondItem="QiK-20-gZA" secondAttribute="bottom" id="eJv-lP-1Aw"/>
                             <constraint firstItem="dZa-us-mco" firstAttribute="leading" secondItem="wnY-0o-a8L" secondAttribute="leading" id="f4i-So-cGC"/>
                             <constraint firstAttribute="trailing" secondItem="dZa-us-mco" secondAttribute="trailing" id="gvi-aa-Rbw"/>
-                            <constraint firstAttribute="trailing" secondItem="tmc-H1-b6F" secondAttribute="trailing" id="pjf-WO-zci"/>
-                            <constraint firstItem="dZa-us-mco" firstAttribute="top" secondItem="tmc-H1-b6F" secondAttribute="bottom" id="zd4-YC-vyj"/>
                         </constraints>
                     </view>
                 </viewController>
