--- a/OpticalValleyUnite/Classes/UI/Home/ViewController/Home.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Home/ViewController/Home.storyboard
@@ -36,7 +36,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AWV-ab-LBm">
-                                                <rect key="frame" x="379" y="4.6666666666666679" width="35" height="35"/>
+                                                <rect key="frame" x="379" y="5" width="35" height="35"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="35" id="VGa-VV-2Jf"/>
                                                     <constraint firstAttribute="height" constant="35" id="bIQ-it-DNC"/>
@@ -329,7 +329,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="春节放假通知" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tr0-bY-fwy">
-                                                    <rect key="frame" x="5" y="65.666666666666686" width="404" height="19.333333333333329"/>
+                                                    <rect key="frame" x="5" y="56" width="404" height="20"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -348,7 +348,6 @@
                                                 <constraint firstItem="eQY-aX-ESa" firstAttribute="top" secondItem="C1C-73-99F" secondAttribute="top" id="FZQ-eL-ly0"/>
                                                 <constraint firstItem="C1C-73-99F" firstAttribute="leading" secondItem="w9E-cL-wHG" secondAttribute="leading" constant="15" id="Gd4-II-j5K"/>
                                                 <constraint firstItem="eQY-aX-ESa" firstAttribute="leading" secondItem="C1C-73-99F" secondAttribute="trailing" constant="6" id="H0x-GL-ODf"/>
-                                                <constraint firstAttribute="bottom" secondItem="Tr0-bY-fwy" secondAttribute="bottom" constant="20" id="JOl-Ug-zK1"/>
                                                 <constraint firstItem="Yh1-BG-A4h" firstAttribute="leading" secondItem="w9E-cL-wHG" secondAttribute="leading" id="JxE-uA-V7x"/>
                                                 <constraint firstItem="3wk-Xy-8lf" firstAttribute="bottom" secondItem="C1C-73-99F" secondAttribute="bottom" id="LCa-hb-MOj"/>
                                                 <constraint firstItem="Tr0-bY-fwy" firstAttribute="leading" secondItem="w9E-cL-wHG" secondAttribute="leading" constant="5" id="LO1-wO-ES4"/>
@@ -357,6 +356,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="Tr0-bY-fwy" secondAttribute="trailing" constant="5" id="aMy-1H-BOB"/>
                                                 <constraint firstAttribute="trailing" secondItem="eQY-aX-ESa" secondAttribute="trailing" constant="15" id="h8o-V1-lcx"/>
                                                 <constraint firstItem="Tr0-bY-fwy" firstAttribute="centerX" secondItem="w9E-cL-wHG" secondAttribute="centerX" id="hdV-9J-2GV"/>
+                                                <constraint firstItem="Tr0-bY-fwy" firstAttribute="top" secondItem="C1C-73-99F" secondAttribute="bottom" constant="12" id="vQW-iN-MEl"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -1043,7 +1043,7 @@
                                 <rect key="frame" x="0.0" y="20" width="414" height="60"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ghK-ko-MM1">
-                                        <rect key="frame" x="206.66666666666666" y="2" width="1" height="55"/>
+                                        <rect key="frame" x="207" y="2" width="1" height="55"/>
                                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="1" id="Ib4-yY-7F6"/>
@@ -1051,7 +1051,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gEy-aw-etE">
-                                        <rect key="frame" x="0.0" y="0.0" width="206.66666666666666" height="60"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="207" height="60"/>
                                         <state key="normal" title="设备详情">
                                             <color key="titleColor" red="0.53333333329999999" green="0.53333333329999999" blue="0.53333333329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
@@ -1063,7 +1063,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jJP-Xg-3eP">
-                                        <rect key="frame" x="207.66666666666663" y="0.0" width="206.33333333333337" height="60"/>
+                                        <rect key="frame" x="208" y="0.0" width="206" height="60"/>
                                         <state key="normal" title="工单">
                                             <color key="titleColor" red="0.53333333329999999" green="0.53333333329999999" blue="0.53333333329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
