日志模块的UI完善调整

--- a/OpticalValleyUnite/Classes/UI/Journal/View/YQJournalDetailHead.xib
+++ b/OpticalValleyUnite/Classes/UI/Journal/View/YQJournalDetailHead.xib
@@ -18,11 +18,11 @@
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="待办事项" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHe-oI-cib">
                     <rect key="frame" x="15" y="23" width="65.5" height="19.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="gHe-oI-cib" firstAttribute="centerY" secondItem="o7D-xB-zMl" secondAttribute="centerY" id="BC3-vW-2gx"/>
                 <constraint firstItem="gHe-oI-cib" firstAttribute="leading" secondItem="o7D-xB-zMl" secondAttribute="leading" constant="15" id="plB-MM-R7o"/>
