--- a/OpticalValleyUnite/Classes/UI/Journal/View/YQJournalCell.xib
+++ b/OpticalValleyUnite/Classes/UI/Journal/View/YQJournalCell.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="journalCell" rowHeight="187" id="TbD-YA-slr" customClass="YQJournalCellView" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="501" height="187"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="journalCell" rowHeight="143" id="TbD-YA-slr" customClass="YQJournalCellView" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="501" height="143"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TbD-YA-slr" id="5T3-J9-HMA">
-                <rect key="frame" x="0.0" y="0.0" width="501" height="186.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="501" height="142.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y85-9q-5KH">
@@ -32,31 +32,25 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sgC-rz-DgT">
-                        <rect key="frame" x="454" y="12" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="458.5" y="12" width="37.5" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="工程班长" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D6N-TS-vna">
-                        <rect key="frame" x="69" y="41" width="70" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="69" y="46" width="53.5" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017-9-15工作日志" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YdF-GY-vdK">
-                        <rect key="frame" x="12" y="71" width="150" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="12" y="71" width="117" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.每日至少巡查一次,特殊情况时需要增加巡查次数" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a3c-Mn-bkw">
-                        <rect key="frame" x="12" y="102" width="477" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2.-表示正常, x表示一般故障" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kkc-63-0pS">
-                        <rect key="frame" x="12" y="135" width="477" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.每日至少巡查一次,特殊情况时需要增加巡查次数" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a3c-Mn-bkw">
+                        <rect key="frame" x="12" y="97" width="477" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -64,8 +58,6 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="sgC-rz-DgT" secondAttribute="trailing" constant="5" id="4Zf-uP-bKy"/>
-                    <constraint firstItem="Kkc-63-0pS" firstAttribute="leading" secondItem="a3c-Mn-bkw" secondAttribute="leading" id="Jg7-im-AeI"/>
-                    <constraint firstItem="Kkc-63-0pS" firstAttribute="top" secondItem="a3c-Mn-bkw" secondAttribute="bottom" constant="12" id="M7c-pH-HrK"/>
                     <constraint firstItem="D6N-TS-vna" firstAttribute="bottom" secondItem="y85-9q-5KH" secondAttribute="bottom" id="MeL-UU-kp9"/>
                     <constraint firstItem="y85-9q-5KH" firstAttribute="top" secondItem="5T3-J9-HMA" secondAttribute="top" constant="12" id="Q6t-2g-SmF"/>
                     <constraint firstItem="D6N-TS-vna" firstAttribute="leading" secondItem="bq4-fP-JI2" secondAttribute="leading" id="QXr-A5-5J2"/>
@@ -78,10 +70,17 @@
                     <constraint firstItem="bq4-fP-JI2" firstAttribute="leading" secondItem="y85-9q-5KH" secondAttribute="trailing" constant="7" id="ZsV-ex-M3L"/>
                     <constraint firstItem="YdF-GY-vdK" firstAttribute="leading" secondItem="y85-9q-5KH" secondAttribute="leading" id="m3e-yP-XWv"/>
                     <constraint firstItem="YdF-GY-vdK" firstAttribute="top" secondItem="y85-9q-5KH" secondAttribute="bottom" constant="9" id="n1k-yr-gCJ"/>
-                    <constraint firstAttribute="trailing" secondItem="Kkc-63-0pS" secondAttribute="trailing" constant="12" id="x7r-dU-jpc"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="27.5" y="-102.5"/>
+            <connections>
+                <outlet property="detailLabel" destination="a3c-Mn-bkw" id="8R5-fv-QE0"/>
+                <outlet property="imageV" destination="y85-9q-5KH" id="OYO-Bb-OG5"/>
+                <outlet property="nameLabel" destination="bq4-fP-JI2" id="JRj-jv-Kfk"/>
+                <outlet property="postLabel" destination="D6N-TS-vna" id="QeT-dI-xcG"/>
+                <outlet property="tempTimeLabel" destination="YdF-GY-vdK" id="gou-hc-Okd"/>
+                <outlet property="timeLabel" destination="sgC-rz-DgT" id="uSK-CN-atw"/>
+            </connections>
+            <point key="canvasLocation" x="-139.5" y="-139.5"/>
         </tableViewCell>
     </objects>
 </document>
